--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -8,14 +8,14 @@
     >
       <span
         class="
-            bg-gradient-to-bl bg-no-repeat bg-bottom bg-[length:90%_40%]
+            bg-gradient-to-bl bg-no-repeat bg-bottom bg-[length:90%_10%]
             from-primary-blue to-primary-blue dark:from-primary-blue dark:to-primary-blue
         "
       >
         alerunza
       </span>
     </h1>
-    <!-- <p class="text-2xl pb-4">Web Developer. OSS Wizard. Blogger.</p> -->
+    <p class="text-center text-2xl">computer science student</p>
   </div>
   <div>
     <p class="mb-5">
