--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -20,7 +20,7 @@ const sortedProjects = projects
 ---
 
 <PageLayout>
-  <PageMeta title={`Projects | ${SITE_TITLE}`} slot="meta" />
+  <PageMeta title={`${SITE_TITLE} / projects`} slot="meta" />
   <section slot="main">
     <ul>
       {
