edit(pages/components): modified pages

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,10 +6,9 @@ import HeaderLink from "./HeaderLink.astro";
   <nav class="hidden md:inline">
     <section class="text-text-bold">
       <ul class="unset flex gap-4 [&>li]:p-0">
-        <li><HeaderLink href="/">Home</HeaderLink></li>
-        <li><HeaderLink href="/blog">Blog</HeaderLink></li>
-        <li><HeaderLink href="/projects">Projects</HeaderLink></li>
-        <li><HeaderLink href="/about">About</HeaderLink></li>
+        <li><HeaderLink href="/">home</HeaderLink></li>
+        <li><HeaderLink href="/blog">blog</HeaderLink></li>
+        <li><HeaderLink href="/projects">projects</HeaderLink></li>
       </ul>
     </section>
   </nav>
