--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,24 +3,12 @@
 
 <footer class="text-xs leading-[1.75] mt-4">
   <div>
-    built with 
     <a
-      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]"
-      href={"https://github.com/flexdinesh/blogster"}
+      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#363636] to-[#a69c9c] hover:after:bg-gradient-to-r hover:after:from-[#363636] hover:after:to-[#ffffff]"
+      href={"https://alerunza.it/"}
       target="_blank"
     >
-      blogster</a> & <a
-      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#b2b2b2] to-[#d7d7d7] hover:after:bg-gradient-to-r hover:after:from-[#525252] hover:after:to-[#ffffff]"
-      href={"https://astro.build/"}
-      target="_blank"
-    >
-      astro</a> and hosted in
-    <a
-      class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00abda] to-[#1476ff] hover:after:bg-gradient-to-r hover:after:from-[#00abda] hover:after:to-[#1476ff]"
-      href={"https://www.netlify.com"}
-      target="_blank"
-    >
-      netlify</a>
+      alerunza</a> - 2024
   </div>
 </footer>
 
