--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,4 +1,5 @@
 ---
+import HeaderLink from "./HeaderLink.astro";
 ---
 
 <section class="mb-8">
@@ -18,19 +19,65 @@
     <p class="text-center text-2xl">computer science student</p>
   </div>
   <div>
-    <p class="mb-5">
-      Hello! This is a starter template to build your own blog with 
-      <a href={"https://github.com/flexdinesh/blogster"} target="_blank">Blogster</a>. 
-      Available in four themes  
-      <a href={"https://blogster-minimal.netlify.app"} target="_blank">minimal</a>, 
-      <a href={"https://blogster-sleek.netlify.app"} target="_blank">sleek</a>, 
-      <a href={"https://blogster-newspaper.netlify.app"} target="_blank">newspaper</a> and
-      <a href={"https://blogster-bubblegum.netlify.app"} target="_blank">bubblegum</a>. 
-      This blog is a demo for <strong>bubblegum</strong> theme.
-      Get started with one simple command.
+    <p class="mb-5 text-center">
+      hello! i'm Alessandro, a computer science student @ <a href="https://www.unicl.it/" target="_blank">unicl.it</a>.
+      <br>i'm passionate about algorithms, data structures, and web development.
+      <div class="text-center">
+        this website is built using 
+        <a
+          class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]"
+          href={"https://github.com/flexdinesh/blogster"}
+          target="_blank"
+        >
+          blogster</a> & <a
+          class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#b2b2b2] to-[#d7d7d7] hover:after:bg-gradient-to-r hover:after:from-[#525252] hover:after:to-[#ffffff]"
+          href={"https://astro.build/"}
+          target="_blank"
+        >
+          astro</a> and hosted in
+        <a
+          class="unset gradient-link tracking-wider font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00abda] to-[#1476ff] hover:after:bg-gradient-to-r hover:after:from-[#00abda] hover:after:to-[#1476ff]"
+          href={"https://www.netlify.com"}
+          target="_blank"
+        >
+          netlify</a>
+    </div>
     </p>
-    <p class="text-center whitespace-nowrap overflow-auto">
-      <code class="py-1 px-2">npx create-blogster@latest --theme bubblegum</code>
+    <p class="text-center mt-10">
+      <a href="mailto:alerunza.ar@gmail.com" class="gradient-link">reply via email</a>
+    </p>
+
+    <p class="text-center mt-10">
+      get started with
+      <div class="text-center text-xl">
+        <HeaderLink href="/blog" class="gradient-link tracking-wider font-bold bg-clip-text bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]">blog</HeaderLink>
+        or
+        <HeaderLink href="/projects" class="gradient-link tracking-wider font-bold bg-clip-text bg-gradient-to-r from-[#f57111] to-[#f79605] hover:after:bg-gradient-to-r hover:after:from-[#f57111] hover:after:to-[#f79605]">projects</HeaderLink>
+      </div>
     </p>
   </div>
 </section>
+
+<style>
+    .gradient-link {
+    position: relative;
+    box-decoration-break: clone;
+    text-decoration: none;
+  }
+
+  .gradient-link:hover:after {
+    transform: translateZ(0) scale(1);
+  }
+
+  .gradient-link:after {
+    left: 0;
+    right: 0;
+    bottom: -2px;
+    content: "";
+    height: 2px;
+    position: absolute;
+    transform: translateZ(0) scaleX(0);
+    transform-origin: left center;
+    transition: all 0.15s ease-in-out;
+  }
+</style>
